--- a/style.css
+++ b/style.css
@@ -107,3 +107,27 @@ h3::after {
 .english {
     grid-column: 1 / 3;
 }
+
+@media (max-width: 768px) {
+    body {
+        font-size: 12px;
+    }
+    h1 {
+        font-size: 2rem;
+    }
+    .container {
+        grid-template-columns: 1fr;
+    }
+    .foto {
+        display: none;
+    }
+    .contacts {
+        grid-row-start: 3;
+    }
+    .courses {
+        grid-row: 4 / 5;
+    }
+    .english {
+        grid-column: 1 / 2;
+    }
+}
