--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -31,6 +31,10 @@ body {
     line-height: 1.7;
 }
 
+main {
+    background-color: var(--mainBgColor);
+}
+
 h1 {
     font-family: 'Playfair Display', serif;
     font-size: 3rem;
@@ -52,7 +56,6 @@ h2::after {
     max-width: 1170px;
     margin: 0 auto;
     padding: 1rem;
-    background-color: var(--mainBgColor);
     color: var(--mainTextColor);
     box-shadow: 0px 0px 5px 1px #000000bf;
     display: grid;
